imoroving the project

--- a/PROJECT 4/styles.css
+++ b/PROJECT 4/styles.css
@@ -75,6 +75,10 @@ li{
   cursor: pointer;
 }
 
+.token:hover {
+    background: rgb(99, 4, 99);
+}
+
 .main {
     display: flex;
     flex-direction: column;
